--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
-PORT=4040
+PORT=3030
+MONGO_URL=mongodb://127.0.0.1:27017/rozobyte
+
+# MONGO_URL=
 # DB_HOST=localhost
 # DB_USER=root
 # DB_PASSWORD=yourpassword
