--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 PORT=3030
-MONGO_URL=mongodb://127.0.0.1:27017/rozobyte
+# MONGO_URL=mongodb://127.0.0.1:27017/
+MONGO_URI=mongodb://127.0.0.1:27017/rozobyte
+
 
 # MONGO_URL=
 # DB_HOST=localhost
