--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "express": "^4.21.2",
     "express-status-monitor": "^1.3.4",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.9.3"
+    "mongoose": "^8.9.3",
+    "morgan": "^1.10.0"
   },
   "name": "backend",
   "version": "1.0.0",
