--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ MONGO_URI=mongodb://127.0.0.1:27017/rozobyte
 # DB_USER=root
 # DB_PASSWORD=yourpassword
 # JWT_SECRET=your_jwt_secret
+# wuvc8ywKWPHWVGTg
