--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-status-monitor": "^1.3.4",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.3",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1"
   },
   "name": "backend",
   "version": "1.0.0",
