--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=3030
-MONGO_URI=
+MONGO_URI=mongodb+srv://smar07482:wuvc8ywKWPHWVGTg@cluster0.v9myh.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
 
 # MONGO_URL=
